--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
   		<h1>Adrián Salvador Ekomo</h1>
   		<h2>Software Engineer - Design and interface expert</h2>
   		<div class="Network-media">
-  			<a href="https://github.com/MagreyTheCode"><i class="fa-brands fa-github"></i></a>
-  			<a href="https://www.instagram.com/whereismagray/"><i class="fa-brands fa-instagram"></i></a>
-  			<a href="https://www.linkedin.com/in/adri%C3%A1n-salvador-mesi-5990b8182/"><i class="fa-brands fa-linkedin"></i></a>
-  			<a href="https://www.twitch.tv/gray1400"><i class="fa-brands fa-twitch"></i></a>
-  			<a href="https://rss.app/myfeeds"><i class="fa-solid fa-rss"></i></a>
+  			<a href="https://github.com/MagreyTheCode" target="_blank"><i class="fa-brands fa-github"></i></a>
+  			<a href="https://www.instagram.com/whereismagray/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+  			<a href="https://www.linkedin.com/in/adri%C3%A1n-salvador-mesi-5990b8182/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+  			<a href="https://www.twitch.tv/gray1400" target="_blank"><i class="fa-brands fa-twitch"></i></a>
+  			<a href="https://rss.app/myfeeds" target="_blank"><i class="fa-solid fa-rss"></i></a>
   		</div>
   	</div>
   </section>
@@ -398,11 +398,11 @@
             <i class="fa-solid fa-angles-up"></i>
         </a>
         <div class="redes">
-  			<a href="#Github"><i class="fa-brands fa-github"></i></a>
-  			<a href="#Instagram"><i class="fa-brands fa-instagram"></i></a>
-  			<a href="#Linkedin"><i class="fa-brands fa-linkedin"></i></a>
-  			<a href="Twich"><i class="fa-brands fa-twitch"></i></a>
-  			<a href="Rss"><i class="fa-solid fa-rss"></i></a>
+  			<a href="https://github.com/MagreyTheCode" target="_blank"><i class="fa-brands fa-github"></i></a>
+  			<a href="https://www.instagram.com/whereismagray/"target="_blank"><i class="fa-brands fa-instagram"></i></a>
+  			<a href="https://www.linkedin.com/in/adri%C3%A1n-salvador-mesi-5990b8182/"target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+  			<a href="https://www.twitch.tv/gray1400"target="_blank"><i class="fa-brands fa-twitch"></i></a>
+  			<a href="https://rss.app/myfeeds"target="_blank"><i class="fa-solid fa-rss"></i></a>
   		</div>
     </footer>
 
