--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
   		<h1>Adrián Salvador Ekomo</h1>
   		<h2>Software Engineer - Design and interface expert</h2>
   		<div class="Network-media">
-  			<a href="https://github.com/MagreyTheCode"><i class="fa-brands fa-github"></i></a>
-  			<a href="https://www.instagram.com/whereismagray/"><i class="fa-brands fa-instagram"></i></a>
-  			<a href="https://www.linkedin.com/in/adri%C3%A1n-salvador-mesi-5990b8182/"><i class="fa-brands fa-linkedin"></i></a>
-  			<a href="https://www.twitch.tv/gray1400"><i class="fa-brands fa-twitch"></i></a>
-  			<a href="https://rss.app/myfeeds"><i class="fa-solid fa-rss"></i></a>
+  			<a href="https://github.com/MagreyTheCode" target="_blank"><i class="fa-brands fa-github"></i></a>
+  			<a href="https://www.instagram.com/whereismagray/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+  			<a href="https://www.linkedin.com/in/adri%C3%A1n-salvador-mesi-5990b8182/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+  			<a href="https://www.twitch.tv/gray1400" ><i class="fa-brands fa-twitch" target="_blank"></i></a>
+  			<a href="https://rss.app/myfeeds" target="_blank"><i class="fa-solid fa-rss"></i></a>
   		</div>
   	</div>
   </section>
@@ -56,7 +56,7 @@
   <section id="about-me" class="about-me">
   	<div class="about-content">
   		<h2>About Me</h2>
-  		<p><span>Hello There!, I'm Adrián </span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt vero officia quos commodi perferendis dicta culpa obcaecati cum tempore. Sed soluta dolorum, temporibus illo maxime minus voluptate labore deleniti excepturi!.</p>
+  		<p><span>Hello There!, I'm Adrián Welcome to my space </span>Over the past year, I've delved into the exciting world of frontend development, and each project has been a new learning adventure. Outside of coding, you can find me on a basketball court or immersed in the world of video games. Here you will not only find examples of my work, but also a little bit of who I am. I enjoy combining my hobbies with my profession, and I think that gives a special touch to what I do. I hope you enjoy exploring my space as much as I enjoy creating it!</p>
   		<div class="row-about">
   			<!--P E R S O N A L  D A T A -->
   			<div class="col">
@@ -124,7 +124,7 @@
   				</div>
   			</div>
   		</div>
-  		<button onclick="descargarPDF()">
+  		<button onclick="descargarPDF()"> 
   				Download CV <i class="fa-solid fa-file-arrow-down"></i>
   				<a href="cv1.pdf" download="cv1.pdf"></a>
 
@@ -236,30 +236,30 @@
             <h2>Curriculum</h2>
             <div class="fila">
                 <div class="col izquierda">
-                    <h3>Educación</h3>
+                    <h3>Education</h3>
                     <div class="item izq">
-                        <h4>Art and Multimedia</h4>
-                        <span class="House">Esprit High School Of Engineers</span>
-                        <span class="date-c">2022 - 2008</span>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, cumque repellat, tempora recusandae aliquam nemo esse natus impedit, nostrum temporibus veritatis eaque soluta aperiam id repudiandae fugiat deserunt! Explicabo, veritatis?</p>
+                        <h4>University</h4>
+                        <span class="House">Esprit, Private Engineering and Technology College</span>
+                        <span class="date-c">2022 - 2026</span>
+                        <p>I am currently a student of Computer Engineering and I hope to graduate in four years. During my training, I have led a project where we developed a game using the C programming language, strengthening my skills in algorithm design and teamwork.</p>
                         <div class="conectori">
                             <div class="circuloi"></div>
                         </div>
                     </div>
                     <div class="item izq">
                         <h4>Art and Multimedia</h4>
-                        <span class="House">Esprit High School Of Engineers</span>
-                        <span class="date-c">2022 - 2026</span>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, cumque repellat, tempora recusandae aliquam nemo esse natus impedit, nostrum temporibus veritatis eaque soluta aperiam id repudiandae fugiat deserunt! Explicabo, veritatis?</p>
+                        <span class="House">Self-taught </span>
+                        <!--<span class="date-c">2022 - 2026</span>-->
+                        <p>I am a self-taught art and multimedia enthusiast. Throughout my career, I have acquired advanced skills in industry-leading tools such as Adobe Photoshop, Adobe Illustrator and Adobe Premiere Pro. My autonomous approach to learning reflects my dedication and commitment to creative excellence. With this knowledge, I have the ability and vision to design engaging and functional user experiences (UI/UX).</p>
                         <div class="conectori">
                             <div class="circuloi"></div>
                         </div>
                     </div>
                     <div class="item izq">
-                        <h4>Art and Multimedia</h4>
-                        <span class="House">Esprit High School Of Engineers</span>
-                        <span class="date-c">2022 - 2026</span>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, cumque repellat, tempora recusandae aliquam nemo esse natus impedit, nostrum temporibus veritatis eaque soluta aperiam id repudiandae fugiat deserunt! Explicabo, veritatis?</p>
+                        <h4>Linux</h4>
+                       <!-- <span class="House">Esprit High School Of Engineers</span>
+                        <span class="date-c">2022 - 2026</span>-->
+                        <p>Throughout my professional and personal career, I have developed a deep affinity and competence with the Linux operating system. My experience ranges from server administration to customising and optimising desktop environments. Thanks to my innate curiosity, I have explored various distributions and tools, which has allowed me to acquire a versatile and practical understanding of this system. My Linux skills are not only focused on using Linux, but also on promoting its open source philosophy and contributing to the community.</p>
                         <div class="conectori">
                             <div class="circuloi"></div>
                         </div>
@@ -270,27 +270,27 @@
                     <h3>Work Experience</h3>
                     <div class="item der">
                         <h4>Front Developer</h4>
-                        <span class="House">Company name</span>
-                        <span class="date-c">2022 - 2024</span>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, cumque repellat, tempora recusandae aliquam nemo esse natus impedit, nostrum temporibus veritatis eaque soluta aperiam id repudiandae fugiat deserunt! Explicabo, veritatis?</p>
+                        <span class="House">CEO Company</span>
+                        <span class="date-c">2023 - 2024</span>
+                        <p>During my time in this position, I had primary responsibility for designing and developing the entire user interface of the website. I took an active role in the conceptualisation, design and implementation of the visual and user interaction experience, ensuring intuitive navigation and appealing aesthetics. I used best practices and modern tools to ensure a responsive design optimised for various devices and browsers. You can see the result of my work at [website name](website URL).</p>
                         <div class="conectord">
                             <div class="circulod"></div>
                         </div>
                     </div>
                     <div class="item der">
-                        <h4>Front Developer</h4>
-                        <span class="House">Company name</span>
-                        <span class="date-c">2022 - 2023</span>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, cumque repellat, tempora recusandae aliquam nemo esse natus impedit, nostrum temporibus veritatis eaque soluta aperiam id repudiandae fugiat deserunt! Explicabo, veritatis?</p>
+                        <h4>Game Developer</h4>
+                        <span class="House">Free Freelance Project</span>
+                        <span class="date-c">From January 2023 to September 2023</span>
+                        <p>In my first year, I embarked on an exciting project creating video games using SDL (Simple DirectMedia Layer) using the C language. Through this project, I gained skills in game design, programming and graphics optimisation. It was an enriching experience that allowed me to understand the fundamentals of game development and face technical challenges. The code and project details are available in my [GitHub] repository (repository URL on GitHub).</p>
                         <div class="conectord">
                             <div class="circulod"></div>
                         </div>
                     </div>
                     <div class="item der">
-                        <h4>Front Developer</h4>
+                        <h4>Back Developer</h4>
                         <span class="House">Company name</span>
-                        <span class="date-c">2022 - 2025</span>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, cumque repellat, tempora recusandae aliquam nemo esse natus impedit, nostrum temporibus veritatis eaque soluta aperiam id repudiandae fugiat deserunt! Explicabo, veritatis?</p>
+                        <span class="date-c">From September 2022 to January 2024</span>
+                        <p>I was actively involved in the development of an e-commerce project, where my main responsibility was to design, implement and optimise the website login form. I ensured the secure and efficient authentication of users, implementing security measures to protect against potential threats and guarantee the privacy of user data. I worked closely with the frontend team to ensure a smooth integration and provide an optimal user experience. You can see the result of our work at [e-commerce name](e-commerce URL).</p>
                         <div class="conectord">
                             <div class="circulod"></div>
                         </div>
@@ -394,17 +394,21 @@
 
  <!--/*F O O T E R   S E C T I O N*/-->
  <footer>
-        <a href="#Home" class="arriba">
-            <i class="fa-solid fa-angles-up"></i>
-        </a>
-        <div class="redes">
-  			<a href="#Github"><i class="fa-brands fa-github"></i></a>
-  			<a href="#Instagram"><i class="fa-brands fa-instagram"></i></a>
-  			<a href="#Linkedin"><i class="fa-brands fa-linkedin"></i></a>
-  			<a href="Twich"><i class="fa-brands fa-twitch"></i></a>
-  			<a href="Rss"><i class="fa-solid fa-rss"></i></a>
-  		</div>
-    </footer>
+    <a href="#Home" class="arriba">
+        <i class="fa-solid fa-angles-up"></i>
+    </a>
+    <div class="redes">
+        <a href="https://github.com/MagreyTheCode" target="_blank"><i class="fa-brands fa-github"></i></a>
+        <a href="https://www.instagram.com/whereismagray/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/adri%C3%A1n-salvador-mesi-5990b8182/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="https://www.twitch.tv/gray1400" target="_blank"><i class="fa-brands fa-twitch"></i></a>
+        <a href="https://rss.app/myfeeds" target="_blank"><i class="fa-solid fa-rss"></i></a>
+    </div>
+    <div class="creditos">
+        <p>Special thanks to the YouTube channel <a href="https://www.youtube.com/c/codigoweb" target="_blank">@codigoweb</a> for their invaluable support and teachings.</p>
+    </div>
+</footer>
+
 
 
 
