--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="container-header ">
   	<header>
   		<div class="logo">
-  			<a href="#">Magray</a>
+  			<a href="#">TEO JACK</a>
   		</div>
   		<nav id="nav" class="responsive">
   		<div id="progress-bar"></div> <!--S C R O L L    B A R    P R O G R E S S I O N -->
